fix missing margin on skeleton

--- a/src/style/scss/anovote/layout/skeleton/sidebar/_sidebar.scss
+++ b/src/style/scss/anovote/layout/skeleton/sidebar/_sidebar.scss
@@ -24,6 +24,7 @@
 }
 
 #create-election {
+    margin-top: 3rem;
     height: 6 * $bu !important;
 }
 
